# cetaceanspeak

./: .gitignore  ORCA_ANALYSIS.md  README.md  commit.txt  pyproject.toml  whale_audio.py  whale_engine.py  whale_speaker.py
cetaceanspeak.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/humpback/: 55113001metadata.csv  55113002metadata.csv  55113003metadata.csv  55113004metadata.csv  55113007metadata.csv  5511300Fmetadata.csv  63019001metadata.csv  63019002metadata.csv  63019003metadata.csv  63019004metadata.csv  63019005metadata.csv  63019007metadata.csv  6301900Bmetadata.csv  6301900Cmetadata.csv  6301900Dmetadata.csv  6301900Tmetadata.csv  6301900Vmetadata.csv  6301900Wmetadata.csv  6301900Ymetadata.csv  6301900Zmetadata.csv  63019010metadata.csv  63019011metadata.csv  63019012metadata.csv  63019014metadata.csv  63019016metadata.csv  63019017metadata.csv  63019018metadata.csv  63019019metadata.csv  6301901Ametadata.csv  6301901Bmetadata.csv  6301901Cmetadata.csv  6301901Dmetadata.csv  6301901Emetadata.csv  6301901Hmetadata.csv  6301901Lmetadata.csv  6301901Mmetadata.csv  6301901Nmetadata.csv  6301901Tmetadata.csv  6301901Umetadata.csv  6301901Vmetadata.csv  (+24 more)
data/orca/killer_whale/metadata/: 60026001metadata.csv  60026002metadata.csv  60026003metadata.csv  60026004metadata.csv  60026005metadata.csv  60026006metadata.csv  6002600Ametadata.csv  6002600Bmetadata.csv  64020001metadata.csv  64020003metadata.csv  89405023metadata.csv  9230000Lmetadata.csv  92300013metadata.csv  92301007metadata.csv  92304008metadata.csv  9230400Dmetadata.csv  (+19 more)
