[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cetaceanspeak"
version = "0.1.0"
description = "Cetacean vocalization translation via IMASM compiler pipeline"
requires-python = ">=3.11"
dependencies = [
    "librosa",
    "soundfile",
    "numpy",
]

[project.scripts]
cetacean-speak   = "whale_audio:main"
cetacean-engine  = "whale_engine:main"

[tool.setuptools]
py-modules = ["whale_engine", "whale_audio"]
